# Garbage_Collection_Route_Optimization

./: .gitignore  Cargo.toml  Dockerfile  README.md  app.py  docker-compose.yml  requirements.txt  tmp.py
data/: garbage_place.xlsx
data/作業時間・コース別重量データ/: 20220401（金）.xlsx  20220404（月）.xlsx  20220405（火）.xlsx  20220407（木）.xlsx  20220408（金）.xlsx  20220411（月）.xlsx  20220412（火）.xlsx  20220414（木）.xlsx  20220415（金）.xlsx  20220418（月）.xlsx  20220419（火）.xlsx  20220421（木）.xlsx  20220422（金）.xlsx  20220425（月）.xlsx  20220426（火）.xlsx  20220428（木）.xlsx  20220429（金）.xlsx  20220502（月）.xlsx  20220503（火）.xlsx  20220505（木）.xlsx  20220506（金）.xlsx  20220509（月）.xlsx  20220510（火）.xlsx  20220512（木）.xlsx  20220513（金）.xlsx  20220516（月）.xlsx  20220517（火）.xlsx  20220519（木）.xlsx  20220520（金）.xlsx  20220523（月）.xlsx  20220524（火）.xlsx  20220526（木）.xlsx  20220527（金）.xlsx  20220530（月）.xlsx  20220531（火）.xlsx  20220602（木）.xlsx  20220603（金）.xlsx  20220606（月）.xlsx  20220607（火）.xlsx  20220609（木）.xlsx  (+12 more)
data/作業時間・コース毎重量（月・木コース）/4月/: 20210401.xlsx  20210405.xlsx  20210408.xlsx  20210412.xlsx  20210415.xlsx  20210419.xlsx  20210422.xlsx  20210426.xlsx  20210429.xlsx
data/作業時間・コース毎重量（月・木コース）/5月/: 20210503.xlsx  20210506.xlsx  20210510.xlsx  20210513.xlsx  20210517.xlsx  20210520.xlsx  20210524.xlsx  20210527.xlsx  20210531.xlsx
data/作業時間・コース毎重量（月・木コース）/6月/: 20210603.xlsx  20210607.xlsx  20210610.xlsx  (+5 more)
src/: ImagePadding.py  address.py  app.py  checkGarbage.py  crawl_image.py  get_place.py  graph.py  main.rs  map_cluster.py  models.rs  rename.py  routes.rs
src/lib/: map_cluster.py  num_cluster.ipynb
(+28 files in other folders)
