[package]
name = "garbage_collection_route_optimization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
geojson = "*"
reqwest = { version="0.11.4", features = ["json"] }
actix-web = "3.3.2"
hyper = { version = "0.14", features = ["full"] }
